kubernetes/apps/obsidian/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: obsidian-sync
  namespace: obsidian-sync
  labels:
    app: obsidian-sync
spec:
  type: ClusterIP
  selector:
    app: obsidian-sync
  ports:
    - name: http
      port: 5984
      targetPort: 5984
      protocol: TCP
